fix selection background color in dark mode

--- a/website/editor/src/editor.css
+++ b/website/editor/src/editor.css
@@ -64,6 +64,10 @@
   background-color: var(--cm-gutters-background) !important;
 }
 
+.cm-selectionBackground {
+  background: var(--cm-selection-background) !important;
+}
+
 .cm-line {
   color: var(--cm-line);
 }
